--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
             href="styles.css"
         />
         <script
+            src="scripts/create-grid.js"
+            defer
+        ></script><script
             src="scripts/main.js"
             defer
         ></script>
         <title>Etch-a-Sketch</title>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="grid-container">
+                <div id="grid"></div>
+            </div>
+        </div>
+    </body>
 </html>
