implement paintCell functionality

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
             href="styles.css"
         />
         <script
+            src="scripts/create-grid.js"
+            defer
+        ></script>
+        <script
             src="scripts/draw-line.js"
             defer
         ></script>
         <script
-            src="scripts/create-grid.js"
+            src="scripts/paint-cell.js"
             defer
         ></script>
         <script
