show current selected color

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <div class="palette">
                 <fieldset class="color-palette">
                     <legend>Colors</legend>
+                    <div
+                        class="current-color"
+                        style="background-color: blue"
+                    ></div>
                     <div class="color-palette-buttons"></div>
                 </fieldset>
             </div>
