--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     ></div>
                     <div class="color-palette-buttons"></div>
                 </fieldset>
+                <fieldset class="tools">
+                    <legend>Tools</legend>
+                    <div class="other-buttons"></div>
+                </fieldset>
             </div>
             <div class="grid-container">
                 <div id="grid"></div>
