--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             defer
         ></script>
         <script
+            src="scripts/create-grid-resize-menu.js"
+            defer
+        ></script>
+        <script
             src="scripts/main.js"
             defer
         ></script>
@@ -35,6 +39,13 @@
     <body>
         <div class="container">
             <div class="palette">
+                <fieldset class="grid-resize">
+                    <legend>Grid Size</legend>
+                    <select
+                        id="grid-resize-buttons"
+                        name="grid-resize-buttons"
+                    ></select>
+                </fieldset>
                 <fieldset class="color-palette">
                     <legend>Colors</legend>
                     <div
